--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meero Harootunian's Portfolio</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     <nav>
-        <div class="name-logo">Meero Harootunian</div>
+        <div class="name-logo"><h1>Meero Harootunian</h1></div>
         <div>
             <ul class="nav-links">
-                <li><a href="./index.html">About</a></li>    
-                <li><a href="./portfolio.html">Portfolio</a></li>    
+                <li><a href="./index.html">About</a> | </li>    
+                <li><a href="./portfolio.html">Portfolio</a> | </li>    
                 <li><a href="/contact.html">Contact</a></li>    
             </ul>
         </div>
+    
     </nav>
+    <hr>
 
     <content>
+        <article class="clearfix">
+            <h2>About Me</h2> <hr width="95%">
+            <div class="img-class"><img src="https://s.abcnews.com/images/International/dolphin-stock-gty-jef-180827_hpMain_16x9_992.jpg" width="250" height="250"></div>
+            My name is meero. Coolio
+        </article>
 
     </content>
     
