--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meero Harootunian's Portfolio</title>
+    <title>About Me</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
