--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meero Harootunian's Portfolio</title>
+    <title>My Portfolio</title>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="header-body">
+
+            <div class="name-logo">
+                <h1>Meero Harootunian</h1>
+            </div>
+            <div>
+                <ul class="nav-links">
+                    <li><a href="./index.html">
+                            <h3>About</h3>
+                        </a> | </li>
+                    <li><a href="./portfolio.html">
+                            <h3>Portfolio</h3>
+                        </a> | </li>
+                    <li><a href="./contact.html">
+                            <h3>Contact</h3>
+                        </a></li>
+                </ul>
+            </div> <!-- end div around nav links -->
+
+    </header>
+
+    </div><!-- end header-body -->
+    <content>
+        <article class="clearfix">
+            <h2>Portfolio</h2>
+            <hr width="95%">
+            <div class="portfolio-entry">
+                <img width="300" height="200" src="assets/images/agave-botanical-botany-1533960.jpg">
+                <div class="portfolio-entry-text">Plant Indexer</div>
+            </div>
+
+            <div class="portfolio-entry">
+                <img width="300" height="200" src="assets/images/animal-canine-cute-2376996.jpg">
+                <div class="portfolio-entry-text">Doggy Care</div>
+            </div>
+
+            <div class="portfolio-entry">
+                <img width="300" height="200" src="assets/images/beach-bird-s-eye-view-drone-photography-1554662.jpg">
+                <div class="portfolio-entry-text">Wave Generator</div>
+            </div>
+
+            <div class="portfolio-entry">
+                <img width="300" height="200" src="assets/images/bright-chapel-colors-2437288.jpg">
+                <div class="portfolio-entry-text">Vacay-Staycay Site</div>
+            </div>
+        </article>
+
+    </content>
+
+    <footer></footer>
 </body>
+
 </html>
