css changes, added portfolio image

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,12 @@
 
     </content>
 
-    <footer></footer>
+    <footer>
+        <p>
+            <br><br>
+            Copyright &copy;
+        </p>
+    </footer>
 </body>
 
 </html>
