--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 
     </content>
     
-    <footer></footer>
+    <footer>
+        <p>
+            <br><br>
+            Copyright &copy;
+        </p>
+    </footer>
 </body>
 </html>
