--- a/portfolio.html
+++ b/portfolio.html
@@ -57,11 +57,21 @@
                 <img width="300" height="200" src="assets/images/bright-chapel-colors-2437288.jpg">
                 <div class="portfolio-entry-text">Vacay-Staycay Site</div>
             </div>
+
+            <div class="portfolio-entry">
+                    <img width="300" height="200" src="assets/images/beautiful-bloom-blossom-2791043.jpg">
+                    <div class="portfolio-entry-text">Flower Delivery Service Website</div>
+                </div>
         </article>
 
     </content>
 
-    <footer></footer>
+    <footer>
+        <p>
+            <br><br>
+            Copyright &copy;
+        </p>
+    </footer>
 </body>
 
 </html>
