added portfolio image and some other changes

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     <content>
         <article class="clearfix">
             <h2>About Me</h2> <hr width="95%">
-            <div class="img-class"><img src="https://s.abcnews.com/images/International/dolphin-stock-gty-jef-180827_hpMain_16x9_992.jpg" width="250" height="250"></div>
-            My name is meero. Coolio
+            <div class="img-class"><img src="./assets/images/portrait.jpg" width="250" height="250"></div>
+            <p style="padding: 0 25px 0 0">
+                My name is Meero and I like programming and making music. I know C#, Ruby, and a little bit of Java and Elixir. I had always avoided front-end work as CSS intimidated me but learning it has been quite fun and challenging!
+                I have been learning to drum with a recently purchased electronic drum kit.
+            </p> 
         </article>
 
     </content>
