--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,13 @@
                     <div class="portfolio-entry-text">Flower Delivery Service Website</div>
                 </div>
         </article>
-
+        <!-- Lets be honest, the below <br> tags are to cheat us some extra 
+            space between content and footer in lieu of getting it done proper 
+            with CSS            
+        -->
+<br><br>
+<br><br>
+<br><br>
     </content>
 
     <footer>
