--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p style="padding: 0 25px 0 0">
                 I have been learning to drum with a recently purchased electronic drum kit and hope to be able to add that to my
                 music. Currently I program my drums in with a drum machine or using my MPD sample pads. I like make hip hop and trap beats the most but also
-                hope to begin making some metal as well. My favorite musical acts include Run the Jewels, Kendrik Lamar, Metallica, and Trivium.
+                hope to begin making some metal as well. My favorite musical acts include Run the Jewels, Kendrick Lamar, Metallica, and Trivium.
                 </p>
 
                 <p style="padding: 0 25px 0 0">
